<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp">

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:columnCount="3"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:layout_row="0"
            android:text="@string/tx_name"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="0"

            android:text="" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:layout_row="1"
            android:text="@string/tx_studentid"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/studenid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1"

            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:layout_row="2"
            android:text="@string/tx_seatno"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/seatno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="2"

            android:text="" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:layout_row="3"
            android:text="@string/tx_created_at"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="3"

            android:text="" />
    </GridLayout>


    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tx_title"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="" />


    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="onClickUrl"
        android:text="@string/tx_url"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autoLink="web"

        android:text="" />


    <TextView

        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tx_comment"

        android:textSize="16dp" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="" />


</LinearLayout>
